# ffmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/migu/hasika/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio.cpp  log.h  player.cpp  video.cpp
app/src/main/cpp/inc/ffmpeg/libavcodec/: avcodec.h  dxva2.h  vaapi.h  vda.h  vdpau.h
app/src/main/cpp/inc/ffmpeg/libavformat/: avformat.h
app/src/main/cpp/inc/ffmpeg/libavutil/: avutil.h  buffer.h  opt.h  pixfmt.h  samplefmt.h
app/src/main/java/cn/migu/hasika/ffmpeg/: MainActivity.java  PlayControl.java  PlayVIew.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/migu/hasika/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
